--- a/Repo Website/Site.master
+++ b/Repo Website/Site.master
@@ -46,14 +46,14 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" runat="server" href="~/">Application name</a>
+                    <a class="navbar-brand" runat="server" href="~/">DropDown Menu Sample</a>
                 </div>
                 <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">
+                   <%-- <ul class="nav navbar-nav">
                         <li><a runat="server" href="~/">Home</a></li>
                         <li><a runat="server" href="~/About">About</a></li>
                         <li><a runat="server" href="~/Contact">Contact</a></li>
-                    </ul>
+                    </ul>--%>
                     <asp:LoginView runat="server" ViewStateMode="Disabled">
                         <AnonymousTemplate>
                             <ul class="nav navbar-nav navbar-right">
@@ -70,6 +70,30 @@
                             </ul>
                         </LoggedInTemplate>
                     </asp:LoginView>
+                   <%-- New location for the drop down menu --%>
+                    <asp:Menu ID="NavMenu" runat="server"
+                         BackColor="#000000" BorderColor="Red"
+                         StaticMenuItemStyle-ForeColor="#999999"
+                         StaticMenuItemStyle-VerticalPadding="10px"
+                         StaticMenuItemStyle-HorizontalPadding="10px"
+                         RenderingMode="List" Orientation="Horizontal"
+                         DynamicMenuItemStyle-ForeColor="#999999"
+                         DynamicMenuStyle-BackColor="Black">
+                    <Items>
+                        <%-- a menuitem that self closes is a root item --%>
+                        <asp:MenuItem Text="Home" NavigateUrl="~/" />
+                        <%-- a drop down menu has nested menuitems --%>
+                        <asp:MenuItem Text = "Samples" Value="whatever">
+                            <asp:MenuItem Text="Page 1" NavigateUrl ="~/SamplePages/Page1"/>
+                            <asp:MenuItem Text="Page 1" NavigateUrl ="~/SamplePages/Page2"/>
+                        </asp:MenuItem>
+                        <%-- a root menu item can also have an external
+                                closing tag but NO nested MenutItems --%>
+                          <asp:MenuItem Text="Page 3" NavigateUrl="~/Page3"></asp:MenuItem>
+                          <asp:MenuItem Text="About" NavigateUrl="~/About" />
+                          <asp:MenuItem Text="Contact" NavigateUrl="~/Contact" />
+                    </Items>
+                   </asp:Menu>
                 </div>
             </div>
         </div>
